# AI_Engineer_Bootcamp

./: README.md  pyproject.toml
Week_01/: .gitignore  pyproject.toml
Week_01/data/tiny_corpus/: 01_policy.md
Week_01/logs/: runs.csv
Week_01/notebooks/: prompt_techniques.ipynb
Week_01/utils/: __init__.py  llm_client.py  prompts.py
config/: config.yaml  models.yaml
data/tiny_corpus/: 02_product_specs.md  03_faq.md
notebooks/: prompt_techniques.ipynb
utils/: config.loader.py  json.utils.py  llm_client.py  logging_utils.py  router.py  token_utils.py
